--- a/config/database.yml
+++ b/config/database.yml
@@ -6,7 +6,7 @@
 development:
   adapter: sqlite3
   # database: db/development.sqlite3
-  database: db/counselor.db
+  database: db/development.sqlite3
   pool: 5
   timeout: 5000
 
