nonfunctional files commit  On branch master 	modified:   .gitignore 	modified:   guidance-rails.sublime-project 	modified:   guidance-rails.sublime-workspace

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,10 @@
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
+/db/counselor.db
 
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+*-workspace
