--- a/config/database.yml
+++ b/config/database.yml
@@ -4,9 +4,13 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
+  # adapter: sqlite3
+  adapter: postgresql
   # database: db/development.sqlite3
-  database: db/development.sqlite3
+  # database: db/development.sqlite3
+  database: guidance_development
+  username: postgres
+  password:
   pool: 5
   timeout: 5000
 
