--- a/config/database.yml
+++ b/config/database.yml
@@ -18,13 +18,21 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  # database: db/development.sqlite3
+  # database: db/development.sqlite3
+  database: guidance_test
+  username: postgres
+  password:
   pool: 5
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  # database: db/development.sqlite3
+  # database: db/development.sqlite3
+  database: guidance_production
+  username: postgres
+  password:
   pool: 5
   timeout: 5000
